<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/back2"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/loginlogo" />

    <Button
        android:id="@+id/buttonByPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/hint_enter"
        android:textColor="#707487" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="#cccccc"
            android:drawableLeft="@drawable/emailtype"
            android:ems="10"
            android:hint="@string/hint_account"
            android:inputType="textEmailAddress"
            android:textColorHint="#707487"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#cccccc"
            android:drawableLeft="@drawable/pwdtype"
            android:ems="10"
            android:hint="@string/hint_passwd"
            android:inputType="textPassword"
            android:textColorHint="#707487"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#424242"
            android:text="@string/login"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/register"
                android:textColor="#707487" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/forget_passwd"
                android:textColor="#707487" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/other_login"
            android:textColor="#707487"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#3b5998"
                android:text="@string/facebook"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#db4a3c"
                android:text="@string/google"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
